# RustBorrowChecker-Clang-Plugin

./: .gitignore  BorrowCheckPlugin.cpp  CMakeLists.txt  LICENSE  Makefile  README.md  ownership.h  test.cpp
